python/python/CubeScriptParser.py
# Generated from CubeScript.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CubeScriptParser ( Parser ):

    grammarFileName = "CubeScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'('", "')'", "'{'", "'}'", 
                     "','", "'struct'", "'>'", "'.'", "'?'", "':'", "'['", 
                     "']'", "'++'", "'--'", "'!'", "'-'", "'+'", "'new'", 
                     "'*'", "'/'", "'%'", "'^'", "'<<'", "'>>'", "'&'", 
                     "'|'", "'&&'", "'||'", "'+='", "'-='", "'*='", "'<'", 
                     "'<='", "'>='", "'=='", "'!='", "'stop;'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'while'", "'if'", 
                     "'else'", "'for'", "'return'", "'switch'", "'at'", 
                     "'bland'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Comment", "BOOL_OPERATOR", "INTEGER", "FLOAT", "IMPORT", 
                      "STRING", "BOOL", "TYPE", "WHILE", "IF", "ELSE", "FOR", 
                      "RETURN", "SWITCH", "CASE", "DEFAULT", "STATES", "WS", 
                      "IDENTIFIER" ]

    RULE_program = 0
    RULE_line = 1
    RULE_statement = 2
    RULE_assignment = 3
    RULE_ifBlock = 4
    RULE_whileBlock = 5
    RULE_parameterList = 6
    RULE_functionBody = 7
    RULE_functionCall = 8
    RULE_forBlock = 9
    RULE_codeBlock = 10
    RULE_functionblock = 11
    RULE_returnstatement = 12
    RULE_importStatement = 13
    RULE_includeStatement = 14
    RULE_arrayDeclaration = 15
    RULE_usingStatement = 16
    RULE_expression = 17
    RULE_multOp = 18
    RULE_addOp = 19
    RULE_cmpOp = 20
    RULE_boolOp = 21
    RULE_constant = 22
    RULE_break = 23
    RULE_switchBlock = 24
    RULE_switchCase = 25
    RULE_defaultCase = 26

    ruleNames =  [ "program", "line", "statement", "assignment", "ifBlock", 
                   "whileBlock", "parameterList", "functionBody", "functionCall", 
                   "forBlock", "codeBlock", "functionblock", "returnstatement", 
                   "importStatement", "includeStatement", "arrayDeclaration", 
                   "usingStatement", "expression", "multOp", "addOp", "cmpOp", 
                   "boolOp", "constant", "break", "switchBlock", "switchCase", 
                   "defaultCase" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    Comment=40
    BOOL_OPERATOR=41
    INTEGER=42
    FLOAT=43
    IMPORT=44
    STRING=45
    BOOL=46
    TYPE=47
    WHILE=48
    IF=49
    ELSE=50
    FOR=51
    RETURN=52
    SWITCH=53
    CASE=54
    DEFAULT=55
    STATES=56
    WS=57
    IDENTIFIER=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CubeScriptParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CubeScriptParser.LineContext)
            else:
                return self.getTypedRuleContext(CubeScriptParser.LineContext,i)


        def getRuleIndex(self):
            return CubeScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CubeScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 377173720015274248) != 0):
                self.state = 54
                self.line()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(CubeScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CubeScriptParser.StatementContext,0)


        def ifBlock(self):
            return self.getTypedRuleContext(CubeScriptParser.IfBlockContext,0)


        def whileBlock(self):
            return self.getTypedRuleContext(CubeScriptParser.WhileBlockContext,0)


        def expression(self):
            return self.getTypedRuleContext(CubeScriptParser.ExpressionContext,0)


        def Comment(self):
            return self.getToken(CubeScriptParser.Comment, 0)

        def usingStatement(self):
            return self.getTypedRuleContext(CubeScriptParser.UsingStatementContext,0)


        def returnstatement(self):
            return self.getTypedRuleContext(CubeScriptParser.ReturnstatementContext,0)


        def getRuleIndex(self):
            return CubeScriptParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = CubeScriptParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.ifBlock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.whileBlock()
                self.state = 65
                self.expression(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.match(CubeScriptParser.Comment)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.usingStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.returnstatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CubeScriptParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArrayDeclarationexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arrayDeclaration(self):
            return self.getTypedRuleContext(CubeScriptParser.ArrayDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclarationexp" ):
                listener.enterArrayDeclarationexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclarationexp" ):
                listener.exitArrayDeclarationexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayDeclarationexp" ):
                return visitor.visitArrayDeclarationexp(self)
            else:
                return visitor.visitChildren(self)


    class BreakexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def break_(self):
            return self.getTypedRuleContext(CubeScriptParser.BreakContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakexp" ):
                listener.enterBreakexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakexp" ):
                listener.exitBreakexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakexp" ):
                return visitor.visitBreakexp(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallExpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionCall(self):
            return self.getTypedRuleContext(CubeScriptParser.FunctionCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallExp" ):
                listener.enterFunctionCallExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallExp" ):
                listener.exitFunctionCallExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallExp" ):
                return visitor.visitFunctionCallExp(self)
            else:
                return visitor.visitChildren(self)


    class UsingStatementexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def usingStatement(self):
            return self.getTypedRuleContext(CubeScriptParser.UsingStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsingStatementexp" ):
                listener.enterUsingStatementexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsingStatementexp" ):
                listener.exitUsingStatementexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsingStatementexp" ):
                return visitor.visitUsingStatementexp(self)
            else:
                return visitor.visitChildren(self)


    class IncludeStatementexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def includeStatement(self):
            return self.getTypedRuleContext(CubeScriptParser.IncludeStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeStatementexp" ):
                listener.enterIncludeStatementexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeStatementexp" ):
                listener.exitIncludeStatementexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludeStatementexp" ):
                return visitor.visitIncludeStatementexp(self)
            else:
                return visitor.visitChildren(self)


    class FunctionblockexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionblock(self):
            return self.getTypedRuleContext(CubeScriptParser.FunctionblockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionblockexp" ):
                listener.enterFunctionblockexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionblockexp" ):
                listener.exitFunctionblockexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionblockexp" ):
                return visitor.visitFunctionblockexp(self)
            else:
                return visitor.visitChildren(self)


    class CommentexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Comment(self):
            return self.getToken(CubeScriptParser.Comment, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentexp" ):
                listener.enterCommentexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentexp" ):
                listener.exitCommentexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommentexp" ):
                return visitor.visitCommentexp(self)
            else:
                return visitor.visitChildren(self)


    class IfblockexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifBlock(self):
            return self.getTypedRuleContext(CubeScriptParser.IfBlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfblockexp" ):
                listener.enterIfblockexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfblockexp" ):
                listener.exitIfblockexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfblockexp" ):
                return visitor.visitIfblockexp(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(CubeScriptParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionexp" ):
                listener.enterExpressionexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionexp" ):
                listener.exitExpressionexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionexp" ):
                return visitor.visitExpressionexp(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(CubeScriptParser.AssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentexp" ):
                listener.enterAssignmentexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentexp" ):
                listener.exitAssignmentexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentexp" ):
                return visitor.visitAssignmentexp(self)
            else:
                return visitor.visitChildren(self)


    class ForblockexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forBlock(self):
            return self.getTypedRuleContext(CubeScriptParser.ForBlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForblockexp" ):
                listener.enterForblockexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForblockexp" ):
                listener.exitForblockexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForblockexp" ):
                return visitor.visitForblockexp(self)
            else:
                return visitor.visitChildren(self)


    class ReturnstatementexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def returnstatement(self):
            return self.getTypedRuleContext(CubeScriptParser.ReturnstatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnstatementexp" ):
                listener.enterReturnstatementexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnstatementexp" ):
                listener.exitReturnstatementexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnstatementexp" ):
                return visitor.visitReturnstatementexp(self)
            else:
                return visitor.visitChildren(self)


    class ImportStatementexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def importStatement(self):
            return self.getTypedRuleContext(CubeScriptParser.ImportStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatementexp" ):
                listener.enterImportStatementexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatementexp" ):
                listener.exitImportStatementexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatementexp" ):
                return visitor.visitImportStatementexp(self)
            else:
                return visitor.visitChildren(self)


    class SwitchBlockexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def switchBlock(self):
            return self.getTypedRuleContext(CubeScriptParser.SwitchBlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchBlockexp" ):
                listener.enterSwitchBlockexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchBlockexp" ):
                listener.exitSwitchBlockexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchBlockexp" ):
                return visitor.visitSwitchBlockexp(self)
            else:
                return visitor.visitChildren(self)


    class WhileblockexpContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CubeScriptParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileBlock(self):
            return self.getTypedRuleContext(CubeScriptParser.WhileBlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileblockexp" ):
                listener.enterWhileblockexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileblockexp" ):
                listener.exitWhileblockexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileblockexp" ):
                return visitor.visitWhileblockexp(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = CubeScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = CubeScriptParser.AssignmentexpContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.assignment()
                pass

            elif la_ == 2:
                localctx = CubeScriptParser.FunctionCallExpContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.functionCall()
                pass

            elif la_ == 3:
                localctx = CubeScriptParser.IfblockexpContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.ifBlock()
                pass

            elif la_ == 4:
                localctx = CubeScriptParser.WhileblockexpContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.whileBlock()
                pass

            elif la_ == 5:
                localctx = CubeScriptParser.ForblockexpContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.forBlock()
                pass

            elif la_ == 6:
                localctx = CubeScriptParser.BreakexpContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.break_()
                pass

            elif la_ == 7:
                localctx = CubeScriptParser.ReturnstatementexpContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 78
                self.returnstatement()
                pass

            elif la_ == 8:
                localctx = CubeScriptParser.ExpressionexpContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 79
                self.expression(0)
                pass

            elif la_ == 9:
                localctx = CubeScriptParser.CommentexpContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 80
                self.match(CubeScriptParser.Comment)
                pass

            elif la_ == 10:
                localctx = CubeScriptParser.UsingStatementexpContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 81
                self.usingStatement()
                pass

            elif la_ == 11:
                localctx = CubeScriptParser.ImportStatementexpContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 82
                self.importStatement()
                pass

            elif la_ == 12:
                localctx = CubeScriptParser.IncludeStatementexpContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 83
                self.includeStatement()
                pass

            elif la_ == 13:
                localctx = CubeScriptParser.ArrayDeclarationexpContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 84
                self.arrayDeclaration()
                pass

            elif la_ == 14:
                localctx = CubeScriptParser.SwitchBlockexpContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 85
                self.switchBlock()
                pass

            elif la_ == 15:
                localctx = CubeScriptParser.FunctionblockexpContext(self, localctx)
                self.enterOuterAlt(localctx, 15)
                self.state = 86
                self.functionblock()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CubeScriptParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(CubeScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CubeScriptParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = CubeScriptParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(CubeScriptParser.IDENTIFIER)
            self.state = 90
            self.match(CubeScriptParser.T__0)
            self.state = 91
            self.expression(0)
            self.state = 92
            self.match(CubeScriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CubeScriptParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(CubeScriptParser.ExpressionContext,0)


        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CubeScriptParser.LineContext)
            else:
                return self.getTypedRuleContext(CubeScriptParser.LineContext,i)


        def ELSE(self):
            return self.getToken(CubeScriptParser.ELSE, 0)

        def getRuleIndex(self):
            return CubeScriptParser.RULE_ifBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlock" ):
                listener.enterIfBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlock" ):
                listener.exitIfBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBlock" ):
                return visitor.visitIfBlock(self)
            else:
                return visitor.visitChildren(self)




    def ifBlock(self):

        localctx = CubeScriptParser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(CubeScriptParser.IF)
            self.state = 95
            self.match(CubeScriptParser.T__2)
            self.state = 96
            self.expression(0)
            self.state = 97
            self.match(CubeScriptParser.T__3)
            self.state = 98
            self.match(CubeScriptParser.T__4)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 377173720015274248) != 0):
                self.state = 99
                self.line()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(CubeScriptParser.T__5)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 106
                self.match(CubeScriptParser.ELSE)
                self.state = 107
                self.match(CubeScriptParser.T__4)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 377173720015274248) != 0):
                    self.state = 108
                    self.line()
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 114
                self.match(CubeScriptParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileBlockContext(ParserRuleContext):
        __slots__ = 'parser'
